# mystem

./: CMakeLists.txt  README.txt  partitions.csv  safe_fullclean.sh  sdkconfig  sdkconfig.old
components/comm_ble/: CMakeLists.txt  comm_ble.c
components/comm_ble/include/: comm_ble.h
components/comm_wifi/: CMakeLists.txt  Kconfig  comm_wifi.c
components/comm_wifi/include/: comm_wifi.h
main/: CMakeLists.txt  app_main.c
main/core/: app.c  app.h  app_events.c  app_events.h  app_state.c  app_state.h  hola_es.pcm
main/display/: font5x7.c  font5x7.h  font8x16.c  font8x16.h  st7735.c  st7735.h
main/experiments/: exp_adc.c  exp_ble.c  exp_gpio.c  exp_i2c.c  exp_lcd_color.c  exp_maze.c  exp_mic.c  exp_pwm.c  exp_remote.c  exp_semaforo.c  exp_speaker.c  exp_tof.c  exp_uart.c  exp_wifi.c  exp_wifi_ap.c  exp_wifi_sta.c  experiment.h  experiments_registry.c  experiments_registry.h
main/input/: drv_input_gpio_keys.c  drv_input_gpio_keys.h  input.h  input_uart_frame.c  uart1_router.c  uart1_router.h
main/net/: market_yahoo.c  market_yahoo.h  remote_web.c  remote_web.h  stock_yahoo.c  stock_yahoo.h  ws2812_rmt_legacy.c  ws2812_rmt_legacy.h
main/stem/: electronic_menu.c  electronic_menu.h
main/ui/: ui.h  ui_console.c  ui_console.h  ui_lcd.c
